--- a/references.bib
+++ b/references.bib
@@ -1925,3 +1925,24 @@ doi = {10.1201/9781420072884-c30}
   year={2021},
   publisher={International Society for Bayesian Analysis}
 }
+
+@Manual{nimblemanual,
+  title = {{NIMBLE} User Manual},
+  author = {Perry {de Valpine} and Christopher Paciorek and Daniel
+    Turek and Nick Michaud and Cliff Anderson-Bergman and Fritz
+    Obermeyer and Claudia {Wehrhahn Cortes} and Abel Rodrìguez and
+    Duncan {Temple Lang} and Sally Paganin},
+  url = {https://r-nimble.org},
+  year = {2023},
+  version = {1.0.1},
+  note = {{R} package manual version 1.0.1},
+  doi = {10.5281/zenodo.1211190},
+}
+
+ @Manual{cranlogs,
+    title = {cranlogs: Download Logs from the 'RStudio' 'CRAN' Mirror},
+    author = {Gábor Csárdi},
+    year = {2023},
+    note = {https://github.com/r-hub/cranlogs,
+https://r-hub.github.io/cranlogs},
+  }
