Rewrite chapter introduction, some Jeff fixes, some TMB epilepsy, some Naomi model, some discussion rewrite

--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -30,7 +30,7 @@ Table: (\#tab:process)
 
 #### HIV prevalence {#hiv-prev}
 
-HIV prevalence $\rho_{x, s, a} \in [0, 1]$ was modelled on the logit scale using the linear predictor
+HIV prevalence $\rho_{x, s, a} \in [0, 1]$ was modelled on the logit scale using the structured additive predictor
 \begin{equation}
 \text{logit}(\rho_{x, s, a}) = \beta^\rho_0 + \beta_{S}^{\rho, s = \text{M}} + \mathbf{u}^\rho_a + \mathbf{u}_a^{\rho, s = \text{M}} + \mathbf{u}^\rho_x + \mathbf{u}_x^{\rho, s = \text{M}} + \mathbf{u}_x^{\rho, a < 15} + \boldsymbol{\mathbf{\eta}}^\rho_{R_x, s, a}. (\#eq:prev)
 \end{equation}
@@ -63,7 +63,7 @@ Table: (\#tab:prev)
 
 #### ART coverage {#art-cov}
 
-ART coverage $\alpha_{x, s, a} \in [0, 1]$ was modelled on the logit scale using the linear predictor
+ART coverage $\alpha_{x, s, a} \in [0, 1]$ was modelled on the logit scale using the structured additive predictor
 \begin{equation}
 \text{logit}(\alpha_{x, s, a}) = \beta^\alpha_0 + \beta_{S}^{\alpha, s = \text{M}} + \mathbf{u}^\alpha_a + \mathbf{u}_a^{\alpha, s = \text{M}} + \mathbf{u}^\alpha_x + \mathbf{u}_x^{\alpha, s = \text{M}} + \mathbf{u}_x^{\alpha, a < 15} + \boldsymbol{\mathbf{\eta}}^\alpha_{R_x, s, a} 
 \end{equation}
@@ -71,7 +71,7 @@ with terms and priors analogous to the HIV prevalence process model in Section \
 
 #### HIV incidence rate {#hiv-inc}
 
-HIV incidence rate $\lambda_{x, s, a} > 0$ was modelled on the log scale using the linear predictor
+HIV incidence rate $\lambda_{x, s, a} > 0$ was modelled on the log scale using the structured additive predictor
 \begin{equation}
 \log(\lambda_{x, s, a}) = \beta_0^\lambda + \beta_S^{\lambda, s = \text{M}} + \log(\rho_{x}^{\text{15-49}}) + \log(1 - \omega \cdot \alpha_{x}^{\text{15-49}}) + \mathbf{u}_x^\lambda + \boldsymbol{\mathbf{\eta}}_{R_x, s, a}^\lambda. \label{eq:inc}
 \end{equation}
